option('enable_vapoursynth', type: 'boolean', value: true, description: 'Enable VapourSynth support')
option('enable_avisynth', type: 'boolean', value: true, description: 'Enable AviSynth support')
option('enable_libass', type: 'boolean', value: true, description: 'Enable libass subtitle burn support')
option('enable_libplacebo', type: 'boolean', value: false, description: 'Enable libplacebo support')
option('enable_vulkan', type: 'boolean', value: false, description: 'Enable Vulkan support (required for libplacebo)')
option('opencl_headers', type: 'string', value: '', description: 'Additional include path for OpenCL headers')
