# meson_embed/meson.build - バイナリリソース埋め込み

embed_script = files('embed_resource.sh')

resource_specs = [
  ['nnedi3_weights', '../resource/nnedi3_weight/nnedi3_weights.bin', 'resource_nnedi3_weights_bin'],
  ['perf_monitor', '../PerfMonitor/perf_monitor.pyw', 'PerfMonitor_perf_monitor_pyw'],
  ['cl_perf_common_py', '../cl_perf/cl_perf_common.py', 'cl_perf_cl_perf_common_py'],
  ['cl_perf_aggregate_py', '../cl_perf/cl_perf_aggregate.py', 'cl_perf_cl_perf_aggregate_py'],
  ['cl_perf_report_py', '../cl_perf/cl_perf_report.py', 'cl_perf_cl_perf_report_py'],
  ['cl_perf_arch_table_json', '../cl_perf/arch_table.json', 'cl_perf_arch_table_json'],
  ['rgy_filter_colorspace_func', '../QSVPipeline/rgy_filter_colorspace_func.h', 'QSVPipeline_rgy_filter_colorspace_func_h'],
  ['clrng_clh', '../clRNG/src/include/clRNG/clRNG.clh', 'clRNG_src_include_clRNG_clRNG_clh'],
  ['clrng_mrg31k3p_clh', '../clRNG/src/include/clRNG/mrg31k3p.clh', 'clRNG_src_include_clRNG_mrg31k3p_clh'],
  ['clrng_private_mrg31k3p_ch', '../clRNG/src/include/clRNG/private/mrg31k3p.c.h', 'clRNG_src_include_clRNG_private_mrg31k3p_c_h'],
  ['rgy_dummy_load_cl', '../QSVPipeline/rgy_dummy_load.cl', 'QSVPipeline_rgy_dummy_load_cl'],
  ['rgy_filter_cl', '../QSVPipeline/rgy_filter.cl', 'QSVPipeline_rgy_filter_cl'],
  ['rgy_filter_afs_analyze_cl', '../QSVPipeline/rgy_filter_afs_analyze.cl', 'QSVPipeline_rgy_filter_afs_analyze_cl'],
  ['rgy_filter_afs_filter_cl', '../QSVPipeline/rgy_filter_afs_filter.cl', 'QSVPipeline_rgy_filter_afs_filter_cl'],
  ['rgy_filter_afs_merge_cl', '../QSVPipeline/rgy_filter_afs_merge.cl', 'QSVPipeline_rgy_filter_afs_merge_cl'],
  ['rgy_filter_afs_synthesize_cl', '../QSVPipeline/rgy_filter_afs_synthesize.cl', 'QSVPipeline_rgy_filter_afs_synthesize_cl'],
  ['rgy_filter_convolution3d_cl', '../QSVPipeline/rgy_filter_convolution3d.cl', 'QSVPipeline_rgy_filter_convolution3d_cl'],
  ['rgy_filter_curves_cl', '../QSVPipeline/rgy_filter_curves.cl', 'QSVPipeline_rgy_filter_curves_cl'],
  ['rgy_filter_deband_cl', '../QSVPipeline/rgy_filter_deband.cl', 'QSVPipeline_rgy_filter_deband_cl'],
  ['rgy_filter_deband_gen_rand_cl', '../QSVPipeline/rgy_filter_deband_gen_rand.cl', 'QSVPipeline_rgy_filter_deband_gen_rand_cl'],
  ['rgy_filter_decimate_cl', '../QSVPipeline/rgy_filter_decimate.cl', 'QSVPipeline_rgy_filter_decimate_cl'],
  ['rgy_filter_decomb_cl', '../QSVPipeline/rgy_filter_decomb.cl', 'QSVPipeline_rgy_filter_decomb_cl'],
  ['rgy_filter_delogo_cl', '../QSVPipeline/rgy_filter_delogo.cl', 'QSVPipeline_rgy_filter_delogo_cl'],
  ['rgy_filter_denoise_dct_cl', '../QSVPipeline/rgy_filter_denoise_dct.cl', 'QSVPipeline_rgy_filter_denoise_dct_cl'],
  ['rgy_filter_denoise_fft3d_cl', '../QSVPipeline/rgy_filter_denoise_fft3d.cl', 'QSVPipeline_rgy_filter_denoise_fft3d_cl'],
  ['rgy_filter_ivtc_cl', '../QSVPipeline/rgy_filter_ivtc.cl', 'QSVPipeline_rgy_filter_ivtc_cl'],
  ['rgy_filter_denoise_knn_cl', '../QSVPipeline/rgy_filter_denoise_knn.cl', 'QSVPipeline_rgy_filter_denoise_knn_cl'],
  ['rgy_filter_denoise_nlmeans_cl', '../QSVPipeline/rgy_filter_denoise_nlmeans.cl', 'QSVPipeline_rgy_filter_denoise_nlmeans_cl'],
  ['rgy_filter_denoise_pmd_cl', '../QSVPipeline/rgy_filter_denoise_pmd.cl', 'QSVPipeline_rgy_filter_denoise_pmd_cl'],
  ['rgy_filter_degrain_cl', '../QSVPipeline/rgy_filter_degrain.cl', 'QSVPipeline_rgy_filter_degrain_cl'],
  ['rgy_filter_degrain_common_cl', '../QSVPipeline/rgy_filter_degrain_common.cl', 'QSVPipeline_rgy_filter_degrain_common_cl'],
  ['rgy_filter_degrain_mvkernel_types_cl', '../QSVPipeline/rgy_filter_degrain_mvkernel_types.cl', 'QSVPipeline_rgy_filter_degrain_mvkernel_types_cl'],
  ['rgy_filter_degrain_mvkernel_sad_cl', '../QSVPipeline/rgy_filter_degrain_mvkernel_sad.cl', 'QSVPipeline_rgy_filter_degrain_mvkernel_sad_cl'],
  ['rgy_filter_degrain_mvkernel_prepare_cl', '../QSVPipeline/rgy_filter_degrain_mvkernel_prepare.cl', 'QSVPipeline_rgy_filter_degrain_mvkernel_prepare_cl'],
  ['rgy_filter_degrain_mvkernel_search_cl', '../QSVPipeline/rgy_filter_degrain_mvkernel_search.cl', 'QSVPipeline_rgy_filter_degrain_mvkernel_search_cl'],
  ['rgy_filter_degrain_mvkernel_calc_sad_cl', '../QSVPipeline/rgy_filter_degrain_mvkernel_calc_sad.cl', 'QSVPipeline_rgy_filter_degrain_mvkernel_calc_sad_cl'],
  ['rgy_filter_degrain_mvkernel_interpolate_cl', '../QSVPipeline/rgy_filter_degrain_mvkernel_interpolate.cl', 'QSVPipeline_rgy_filter_degrain_mvkernel_interpolate_cl'],
  ['rgy_filter_degrain_analyze_cl', '../QSVPipeline/rgy_filter_degrain_analyze.cl', 'QSVPipeline_rgy_filter_degrain_analyze_cl'],
  ['rgy_filter_degrain_render_cl', '../QSVPipeline/rgy_filter_degrain_render.cl', 'QSVPipeline_rgy_filter_degrain_render_cl'],
  ['rgy_filter_degrain_debug_cl', '../QSVPipeline/rgy_filter_degrain_debug.cl', 'QSVPipeline_rgy_filter_degrain_debug_cl'],
  ['rgy_filter_rtgmc_border_cl', '../QSVPipeline/rgy_filter_rtgmc_border.cl', 'QSVPipeline_rgy_filter_rtgmc_border_cl'],
  ['rgy_filter_rtgmc_search_prefilter_cl', '../QSVPipeline/rgy_filter_rtgmc_search_prefilter.cl', 'QSVPipeline_rgy_filter_rtgmc_search_prefilter_cl'],
  ['rgy_filter_rtgmc_edi_cl', '../QSVPipeline/rgy_filter_rtgmc_edi.cl', 'QSVPipeline_rgy_filter_rtgmc_edi_cl'],
  ['rgy_filter_kfm_common_cl', '../QSVPipeline/rgy_filter_kfm_common.cl', 'QSVPipeline_rgy_filter_kfm_common_cl'],
  ['rgy_filter_kfm_pad_cl', '../QSVPipeline/rgy_filter_kfm_pad.cl', 'QSVPipeline_rgy_filter_kfm_pad_cl'],
  ['rgy_filter_kfm_static_cl', '../QSVPipeline/rgy_filter_kfm_static.cl', 'QSVPipeline_rgy_filter_kfm_static_cl'],
  ['rgy_filter_kfm_analyze_cl', '../QSVPipeline/rgy_filter_kfm_analyze.cl', 'QSVPipeline_rgy_filter_kfm_analyze_cl'],
  ['rgy_filter_kfm_render_cl', '../QSVPipeline/rgy_filter_kfm_render.cl', 'QSVPipeline_rgy_filter_kfm_render_cl'],
  ['rgy_filter_kfm_mask_cl', '../QSVPipeline/rgy_filter_kfm_mask.cl', 'QSVPipeline_rgy_filter_kfm_mask_cl'],
  ['rgy_filter_kfm_switch_cl', '../QSVPipeline/rgy_filter_kfm_switch.cl', 'QSVPipeline_rgy_filter_kfm_switch_cl'],
  ['rgy_filter_kfm_ucf_cl', '../QSVPipeline/rgy_filter_kfm_ucf.cl', 'QSVPipeline_rgy_filter_kfm_ucf_cl'],
  ['rgy_filter_rtgmc_retouch_cl', '../QSVPipeline/rgy_filter_rtgmc_retouch.cl', 'QSVPipeline_rgy_filter_rtgmc_retouch_cl'],
  ['rgy_filter_rtgmc_shimmer_repair_cl', '../QSVPipeline/rgy_filter_rtgmc_shimmer_repair.cl', 'QSVPipeline_rgy_filter_rtgmc_shimmer_repair_cl'],
  ['rgy_filter_rtgmc_lossless_cl', '../QSVPipeline/rgy_filter_rtgmc_lossless.cl', 'QSVPipeline_rgy_filter_rtgmc_lossless_cl'],
  ['rgy_filter_rtgmc_primitive_cl', '../QSVPipeline/rgy_filter_rtgmc_primitive.cl', 'QSVPipeline_rgy_filter_rtgmc_primitive_cl'],
  ['rgy_filter_rtgmc_mmask_cl', '../QSVPipeline/rgy_filter_rtgmc_mmask.cl', 'QSVPipeline_rgy_filter_rtgmc_mmask_cl'],
  ['rgy_filter_edgelevel_cl', '../QSVPipeline/rgy_filter_edgelevel.cl', 'QSVPipeline_rgy_filter_edgelevel_cl'],
  ['rgy_filter_rtgmc_bob_cl', '../QSVPipeline/rgy_filter_rtgmc_bob.cl', 'QSVPipeline_rgy_filter_rtgmc_bob_cl'],
  ['rgy_filter_maa_cl', '../QSVPipeline/rgy_filter_maa.cl', 'QSVPipeline_rgy_filter_maa_cl'],
  ['rgy_filter_msharpen_cl', '../QSVPipeline/rgy_filter_msharpen.cl', 'QSVPipeline_rgy_filter_msharpen_cl'],
  ['rgy_filter_msmooth_cl', '../QSVPipeline/rgy_filter_msmooth.cl', 'QSVPipeline_rgy_filter_msmooth_cl'],
  ['rgy_filter_mpdecimate_cl', '../QSVPipeline/rgy_filter_mpdecimate.cl', 'QSVPipeline_rgy_filter_mpdecimate_cl'],
  ['rgy_filter_nnedi_cl', '../QSVPipeline/rgy_filter_nnedi.cl', 'QSVPipeline_rgy_filter_nnedi_cl'],
  ['rgy_filter_overlay_cl', '../QSVPipeline/rgy_filter_overlay.cl', 'QSVPipeline_rgy_filter_overlay_cl'],
  ['rgy_filter_pad_cl', '../QSVPipeline/rgy_filter_pad.cl', 'QSVPipeline_rgy_filter_pad_cl'],
  ['rgy_filter_resize_cl', '../QSVPipeline/rgy_filter_resize.cl', 'QSVPipeline_rgy_filter_resize_cl'],
  ['rgy_filter_ssim_cl', '../QSVPipeline/rgy_filter_ssim.cl', 'QSVPipeline_rgy_filter_ssim_cl'],
  ['rgy_filter_smooth_cl', '../QSVPipeline/rgy_filter_smooth.cl', 'QSVPipeline_rgy_filter_smooth_cl'],
  ['rgy_filter_subburn_cl', '../QSVPipeline/rgy_filter_subburn.cl', 'QSVPipeline_rgy_filter_subburn_cl'],
  ['rgy_filter_transform_cl', '../QSVPipeline/rgy_filter_transform.cl', 'QSVPipeline_rgy_filter_transform_cl'],
  ['rgy_filter_tweak_cl', '../QSVPipeline/rgy_filter_tweak.cl', 'QSVPipeline_rgy_filter_tweak_cl'],
  ['rgy_filter_unsharp_cl', '../QSVPipeline/rgy_filter_unsharp.cl', 'QSVPipeline_rgy_filter_unsharp_cl'],
  ['rgy_filter_chromashift_cl', '../QSVPipeline/rgy_filter_chromashift.cl', 'QSVPipeline_rgy_filter_chromashift_cl'],
  ['rgy_filter_deblock_cl', '../QSVPipeline/rgy_filter_deblock.cl', 'QSVPipeline_rgy_filter_deblock_cl'],
  ['rgy_filter_warpsharp_cl', '../QSVPipeline/rgy_filter_warpsharp.cl', 'QSVPipeline_rgy_filter_warpsharp_cl'],
  ['rgy_filter_bwdif_cl', '../QSVPipeline/rgy_filter_bwdif.cl', 'QSVPipeline_rgy_filter_bwdif_cl'],
  ['rgy_filter_yadif_cl', '../QSVPipeline/rgy_filter_yadif.cl', 'QSVPipeline_rgy_filter_yadif_cl'],
]

resource_objects = []
foreach spec : resource_specs
  resource_objects += custom_target('embed_' + spec[0],
    input: spec[1],
    output: spec[0] + '.o',
    command: ['bash', embed_script, '@INPUT@', '@OUTPUT@', spec[2]],
  )
endforeach
